kubernetes/apps/security/vault/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault
spec:
  hostnames:
    - vault.pospiech.dev
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: vault-ui
          port: 8200
      matches:
        - path:
            type: PathPrefix
            value: /
